--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  http: ^0.12.0+1
+  network_client:
+    git:
+      url: https://github.com/mahmed8003/network_client
 
 
 
